Fixing the delete button spacing

--- a/public/css/cook-easetest.webflow.css
+++ b/public/css/cook-easetest.webflow.css
@@ -415,7 +415,7 @@ p {
     right: 5%;
   }
   .inventory-listings {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
   }
   .navbar-button {
     background-color: #f80;
